--- a/references.bib
+++ b/references.bib
@@ -369,6 +369,13 @@
   publisher={Guilford Press}
 }
 
+@book{montgomery2021introduction,
+  title={Introduction to linear regression analysis},
+  author={Montgomery, Douglas C and Peck, Elizabeth A and Vining, G Geoffrey},
+  year={2021},
+  publisher={John Wiley \& Sons}
+}
+
 % ML
 
 @article{ullah2020applications,
@@ -381,6 +388,17 @@
   publisher={Elsevier}
 }
 
+@article{sarker2021machine,
+  title={Machine learning: Algorithms, real-world applications and research directions},
+  author={Sarker, Iqbal H},
+  journal={SN computer science},
+  volume={2},
+  number={3},
+  pages={160},
+  year={2021},
+  publisher={Springer}
+}
+
 @misc{openai2023gpt4,
       title={GPT-4 Technical Report}, 
       author={OpenAI},
@@ -388,6 +406,13 @@
       eprint={2303.08774},
       archivePrefix={arXiv},
       primaryClass={cs.CL}
+}
+
+@article{thoppilan2022lamda,
+  title={Lamda: Language models for dialog applications},
+  author={Thoppilan, Romal and De Freitas, Daniel and Hall, Jamie and Shazeer, Noam and Kulshreshtha, Apoorv and Cheng, Heng-Tze and Jin, Alicia and Bos, Taylor and Baker, Leslie and Du, Yu and others},
+  journal={arXiv preprint arXiv:2201.08239},
+  year={2022}
 }
 
 @article{hornik1989multilayer,
@@ -399,4 +424,20 @@
   pages={359--366},
   year={1989},
   publisher={Elsevier}
+}
+
+@book{rey2023geographic,
+  title={Geographic data science with python},
+  author={Rey, Sergio and Arribas-Bel, Dani and Wolf, Levi John},
+  year={2023},
+  publisher={CRC Press}
+}
+
+@inproceedings{kamada2006support,
+  title={Support vector regression using mahalanobis kernels},
+  author={Kamada, Yuya and Abe, Shigeo},
+  booktitle={Artificial Neural Networks in Pattern Recognition: Second IAPR Workshop, ANNPR 2006, Ulm, Germany, August 31-September 2, 2006. Proceedings 2},
+  pages={144--152},
+  year={2006},
+  organization={Springer}
 }
