--- a/chapter4.tex
+++ b/chapter4.tex
@@ -6,10 +6,14 @@
 In recent times, the area of machine learning has seen big advancements in terms of model size and complexity. Especially in the area of generative AI, transformer-based neural networks have revolutionised text and image generation. Models such as OpenAI's \textit{ChatGPT}~\cite{openai2023gpt4} or Google's \textit{LaMDA}~\cite{thoppilan2022lamda} have generated significant hype for the possiblity of use of AI\@. Additionally, statements like the universal approximation theorem, which states that a feed-forward network with a single hidden layer containing a finite number of neurons can approximate any continous function~\cite{hornik1989multilayer}, emphasize the potential power of ML models.
 As a result, the question arises what benefits AI can bring to other areas of application, such as interpolation. In this chapter, we will discuss the usage of ML in the context of data enrichment via interpolation, more precisely in the context of smart cities and air temperature interpolation, and outline possible advantages and disadvantages compared to traditional (geo-) statistical methods.\\
 % TODO: emphasize the usefulness for handling dynamic data, such as moving sensors
-% Definitions
-First of all, we need to clarify what is meant by artificial intelligence (AI), machine learning (ML) and deep learning (DL). AI is a broad term that is used to describe the ability to perform tasks, that are usually associated with human intelligence. ML is a subfield of AI, that focuses on the ability of a system to learn from data without being explicitly programmed to do so. Finally, DL is a subfield of ML, that uses artificial neural networks, which imitate the structure of the human brain, to learn from data and perform various tasks.\\
 % ML in the context of the goal of this work
-Because ML is such a powerfull tool, in this chapter we will discuss how ML can be used to answer the question, how ML can be used for contextual data enrichment via interpolation, specifically in the context of smart cities and air temperature sensing applications. In the following, we first take a look at the taxonomy of ML algorithms in order to understand which interpolation tasks ML can solve, before deciding on a number of potential ML models for the task of air temperature interpolation, which will later be implemented and evaluated.
+Because ML is such a powerfull tool, in this chapter we will discuss how ML can be used for contextual data enrichment via interpolation, specifically in the context of smart cities and air temperature sensing applications. More specifically, as meteorological research and analysis activities are usually in need of gridded or continuous data~\cite{sekulic2020spatio}, the goal of this chapter is to design a ML model that is capable of turning these single data-points into a gridded data layer of air temperature where each cell has a specific air temperature value. Furthermore, traditional (geo-) statistical approaches have certain limitations such as potentially lower flexibility. In the context of temperature interpolation, another important question to discuss is how moving sensor data can be incoporated into the model in addition to statinary sensors and weather stations.\\ 
+In the following, we first take a look at the taxonomy of ML algorithms in order to understand which interpolation tasks ML can solve, before deciding on a number of potential ML models for the task of air temperature interpolation, which will later be implemented and evaluated.
+
+\section{AI vs. Machine Learning vs. Deep Learning}
+
+Before diving deeper into the applications of ML, we need to clarify what is meant by artificial intelligence (AI), machine learning (ML) and deep learning (DL). AI is a broad term that is used to describe the ability to perform tasks, that are usually associated with human intelligence. ML is a subfield of AI, that focuses on the ability of a system to learn from data without being explicitly programmed to do so. Finally, DL is a subfield of ML, that uses artificial neural networks, which imitate the structure of the human brain, to learn from data and perform various tasks.\\
+% TODO: graphic?
 
 \section{Taxonomy of Machine Learning Algorithms}
 
@@ -34,6 +38,7 @@ Based on the domain, there already exist proposed best-practices for which algor
 % TODO: table with model comparison for quick overview
 
 \subsection{Linear Regression}
+\label{subsec: linear regression}
 
 Linear regression~\cite{montgomery2021introduction} is a comparatively simple, yet very popular and widely used model for regression problems. The goal of this model is to predict a continous dependent variable based on a number of independent variables. These independent variables can be either continous or discrete. The model can be expressed as follows:
 
@@ -42,7 +47,7 @@ Linear regression~\cite{montgomery2021introduction} is a comparatively simple, y
     y = \beta_0 + \beta_1 x_1 + \beta_2 x_2 + ... + \beta_n x_n + \epsilon
 \end{equation}
 
-The relationship between the parameters is assumed to be liniear, while each variable must be independent of each other. Due to this independent assumption, linear regression is not suitable for (geo-) spatial data, as these types of variables are usually correlated with each other, which we will later see in Sec.~\ref{sec:geolocation}.
+The relationship between the parameters is assumed to be liniear, while each variable must be independent of each other. Due to this independent assumption, there are special steps needed to make linear regression work for (geo-) spatial data, as these types of variables are usually correlated with each other.
 
 \subsection{Regression Trees and Random Forests}
 
@@ -75,17 +80,17 @@ Neural networks
 
 \section{Model Assumptions from the Data Layer}
 
-Next to the model, the most important thing for a machine learning algorithm is the data. Even when the model is perfectly suited for the task at hand, if the data is not suitable, e.g. not enough data, wrong quality, wrongly prepared or formatted etc., the model will not be able to perform well. In the following, we take a look at the data coming from the data-layer and discuss important assumptions such as spatial and temporal autocorrelation.\\
-First of all, the data-layer exposes a variety of single data-points for various features for different locations for current and past points in time. As meteorological research and analysis activities are usually in need of gridded or continuous data~\cite{sekulic2020spatio}, the goal of this chapter is to design a model that is capable of turning these single data-points into a gridded data layer of air temperature where each cell has a specific air temperature value. Features other than air temperature could further improve the predecition quality, like how~\cite{alonso2020new} suggests that in their study the Normalized Difference Vegetation Index (NDVI) and Modified Normalized Difference Water Index (MNDWI) have a strong impact on their estimation model. Therefore, we discuss how additional features can be included in the model.\\
+Next to the model, the most important thing for a machine learning algorithm is the data. Even when the model is perfectly suited for the task at hand, if the data is not suitable, e.g. not enough data, wrong quality, wrongly prepared or formatted etc., the model will not be able to perform well. In the following, we take a look at the data coming from the data-layer and discuss important assumptions such as spatial and temporal autocorrelation. These correlations are important to consider, as they could invalidate models as f.e. Linear Regression~\ref{subsec: linear regression} assumes uncorrelated input variables.\\
+First of all, the data-layer exposes a variety of single data-points for various features for different locations for current and past points in time.
+.Features other than air temperature could further improve the predecition quality, like how~\cite{alonso2020new} suggests that in their study the Normalized Difference Vegetation Index (NDVI) and Modified Normalized Difference Water Index (MNDWI) have a strong impact on their estimation model. Therefore, we discuss how additional features can be included in the model.\\
 This model should then be deloyed inside the \textit{service-layer} and act as a building block for further temperature related research and analysis, as air temperature is an important variable for research in agronomy, meteorology, hydrology, ecology and many other fields of application and could be used for UHI detection in the context of smart cities. The general idea and architecture behind the model should not only be applicable for air temperature, but also other types of output features, even tho potentially significant domain knowledge, like in geostatistical analysis and statistics, is required to select and prepare the input features.\\
 % TODO: summary of the assumptions for the geolocation data
-Generally, there are different types of input features. Firstly, there are discrete measurements that capture the underlying continuous geological process as a specific value at a certain point in time. Examples for this are the measurements from sensors which might be deployed in an urban environment to capture air temperature, humidity and more. Important to note here is the interval, the values are captured. For example, a sensor might capture the air temperature as the average over five minutes, whereas a rain sensor might capture the absolute amount of rain in a specific time interval. Secondly, there are calculated features, which might be derived from the discrete measurements or the location of a measurement. For example, the distance to the closest body of water with a minimum size of $x^2$ meters might be a important information for the air temperature. Lastly, ...
+Generally, there are different types of input features. Firstly, there are discrete measurements that capture the underlying continuous geological process as a specific value at a certain point in time. Examples for this are the measurements from sensors which might be deployed in an urban environment to capture air temperature, humidity and more. Important to note here is the interval, the values are captured. For example, a sensor might capture the air temperature as the average over five minutes, whereas a rain sensor might capture the absolute amount of rain in a specific time interval. Secondly, there are calculated features, which might be derived from the discrete measurements or the location of a measurement. For example, the distance to the closest body of water with a minimum size of $x^2$ meters might be a important information for the air temperature. Lastly, ...\\
 % data from gridded data sources (e.g. affiliation to postal code, district...)
+In the following chapter, we discuss how different types of correlation between measurements can be taken into account to improve the model and gain additional insights into local (meteological) dynamics.
 
-\subsection{Incorporating Geolocation Data}
-\label{sec:geolocation}
-
-\subsubsection{Spatial Autocorrelation}
+\subsection{Spatial Autocorrelation}
+% How different measurements are spatially related inside a time series
 
 As discussed in chapter \ref{chap:Related Work}, there is a dependency between air temperature and other meteological features and the location of the sensors. The closer a sensor is to another sensor, the more correlated the sensor readings should be.
 In geo-statistics, this is called spatial autocorrelation and can be defined traditionally with the Moran's I index~\cite{moran1948interpretation} or the Geary's coefficient~\cite{geary1954contiguity}. 
@@ -104,15 +109,20 @@ The next approach would be to convert the
 
 - area n x m grid of data points, each grid cell with n x n size (depending on the resulution), 4D space with location as x and y coordinates (euclidean distance -> but only for smaller areas such as city of Hamburg and suroundings), time as z coordinate and feature values as w coordinate.\\
 
-\subsubsection{Temporal Autocorrelation}
-% How to handle timeseries data and short term memory
+\subsection{Temporal Autocorrelation}
+% How different measurements are temporally related inside a time series
+
+
+\subsection{Temporal Cross Correlation}
+% How different time series are related to each other (seasonaility)
 
 % TODO
+\subsection{Dealing with Correlation}
 
+Todo: Techniques to turn correlated variables into uncorrelated ones
+- principal component analysis (PCA)
+- ...
 
-
-
-% TODO: write
 \subsection{Dealing with Uncertainty}
 - The model has a lot of uncertainty
 - model uncertainty in input data? (depending on sensor type, sensor age, placement...)
